syntax = "proto3";

package meshtrade.reporting.income_report.v1;

import "google/protobuf/timestamp.proto";
import "meshtrade/type/v1/token.proto";
import "meshtrade/type/v1/address.proto";
import "meshtrade/type/v1/amount.proto";
import "meshtrade/reporting/income_report/v1/summary.proto";
import "meshtrade/reporting/income_report/v1/entry.proto";

option go_package = "github.com/meshtrade/api/go/reporting/income_report/v1;incomeReportv1";

message IncomeReport {

  repeated reporting.income_report.v1.Entry entries = 1;

  reporting.income_report.v1.Summary summary = 2;

  meshtrade.type.v1.Token reporting_currency = 3;

  message Period {
    google.protobuf.Timestamp from = 1;
    google.protobuf.Timestamp to = 2;
  }

  Period period = 4;

  google.protobuf.Timestamp generation_date = 5;

  string account_number = 6;

  repeated string disclaimers = 7;

  meshtrade.type.v1.Address client_address = 8;

  string client_name = 9;

  string copyright = 10;
}
